--- a/assets/Style/uppgift_3.css
+++ b/assets/Style/uppgift_3.css
@@ -4,8 +4,8 @@ body{
 	padding: 0;
 }
 #header{
-	padding: 15px;
-	font-style: Sans-Serif;
+	padding: 10px;
+	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
 	background-color: #6a827e;
 }
@@ -28,11 +28,10 @@ h2{
 	background-color: #769b94;
 }
 #footer{
-	font-style: Sans-Serif;
 	font-size: small;
 	background-color: #9aa5a3;
 	padding-top: 0.2px;
-	padding-bottom: 68px;
+	padding-bottom: 13.5px;
 	text-align: center;
 	
 }
