--- a/assets/Style/uppgift_3.css
+++ b/assets/Style/uppgift_3.css
@@ -6,7 +6,9 @@ body{
 #header{
 	padding: 10px;
 	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
 	background-color: #6a827e;
+	
 }
 #main{
 	width: 73%;
