--- a/assets/Style/examUppgift.css
+++ b/assets/Style/examUppgift.css
@@ -2,8 +2,12 @@
 	text-align: center;
 }
 
-.receptHeader,.receptNav{
+.myHeaders,.receptNav{
 	text-align: center;
+}
+
+.myHeaders,h2,h4{
+	font-family: "Arial Black", Gadget, sans-serif;
 }
 
 .instructions{
@@ -27,8 +31,9 @@ body{
 	width: 12.5%;
 	padding-bottom: 170px;
 	border: 6px solid gray;
-	padding-left: 50px;
+	padding-left: 20px;
 	padding-top: 35px;
+	padding-right: 35px;
 	margin-top: 5%;
 	margin-left: 2%;
 	background-color: #e2d78e;
